[package]
name = "rw5_file_parser"
version = "0.1.0"
edition = "2018"

# This is a library project, not an executable
[lib]
name = "rw5_file_parser"
path = "src/lib.rs"

# Specify dependencies here if needed
[dependencies]
chrono = "*"
anyhow = "*"
itertools = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = { version = "*", features = ["derive"] }
derive_more = { version = "1", features = ["from"] }
rinex = { path = "/home/javier/proy/rinex/rinex" }

[dev-dependencies]
tempfile = "*"

[profile.test]
panic = "abort"

